@@ -28,4 +28,5 @@ EXTRA_DIST += \
               m4/iconv.m4 \
               m4/lib-ld.m4 \
               m4/lib-link.m4 \
-              m4/lib-prefix.m4
+              m4/lib-prefix.m4 \
+              m4/pkg.m4
